[package]
name = "eden-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
b45 = "0.1.0"
encoding_rs = "0.8.33"
fast32 = "1.0.2"
getrandom = { version = "0.2", features = ["js"] }
kanaria = "0.2.0"
kryptos = "0.6.3"
num = "0.4.1"
num-bigfloat = "1.7.1"
num-bigint = "0.4.4"
rayon = "1.9.0"
serde = "1.0.197"
serde_json = "1.0.114"
widestring = "1.0.2"
worker = "0.7.0"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
